# pdfcat

./: .release.toml  Cargo.toml  README.md  release.toml
.github/workflows/: ci.yml  release.yml
crates/pdfcat/: Cargo.toml
crates/pdfcat-cli/: Cargo.toml
crates/pdfcat-cli/src/: main.rs
crates/pdfcat/benches/: merge_bench.rs
crates/pdfcat/fuzz/: Cargo.toml
crates/pdfcat/src/: error.rs
crates/pdfcat/src/io/: reader.rs
crates/pdfcat/src/merge/: mod.rs  pages.rs
crates/pdfcat/src/utils/: mod.rs
crates/pdfcat/tests/: integration_test.rs
crates/pdfcat/tests/integration/: dry_run.rs
pdfcat/: Cargo.toml  README.md
pdfcat-cli/: Cargo.toml  build.rs
pdfcat-cli/src/: cli.rs  main.rs
pdfcat/benches/: merge_bench.rs
pdfcat/fuzz/fuzz_targets/: parse_pdf_paths.rs
pdfcat/src/: config.rs  error.rs  lib.rs
pdfcat/src/io/: mod.rs  reader.rs  writer.rs
pdfcat/src/merge/: bookmarks.rs  merger.rs  metadata.rs  mod.rs  pages.rs
pdfcat/src/output/: formatter.rs  mod.rs  progress.rs
pdfcat/src/validation/: mod.rs
pdfcat/tests/integration/: basic_merge.rs  bookmarks.rs  dry_run.rs  error_cases.rs  mod.rs
pdfcat/tests/integration/common/: mod.rs
pkg/: install.sh
scripts/: install.ps1  install.sh
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  ops.rs  walker.rs
src/io/: mod.rs  reader.rs  reader_v1.rs  writer.rs  writer_v1.rs
src/merge/: merger.rs  mod.rs
src/output/: mod.rs  progress.rs
src/utils/: mod.rs
src/validation/: mod.rs
