[package]
name = "pdfjoin"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.51", features = [
    "derive",
    "wrap_help",
    "string",
    "env",
    "cargo",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
lopdf = "0.32"
anyhow = "1.0"

globset = "0.4"
glob = "0.3"    # glob is often easier for simple expansion
walkdir = "2.3" # Useful for recursive globbing (**)
