[package]
name = "pdfjoin"
version = "0.1.0"
edition = "2024"
authors = ["Nelson Dominguez <ekkolon@proton.me>"]
description = "Concatenate PDF files into a single document"
repository = "https://github.com/pdfcat/pdfcat"
license = "MIT OR Apache-2.0"
keywords = ["pdf", "merge", "cli", "concatenate"]
categories = ["command-line-utilities"]

[[bin]]
name = "pdfcat"
path = "src/main.rs"

[lib]
name = "pdfcat"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.35", features = [
    "rt-multi-thread",
    "fs",
    "io-util",
    "macros",
] }
futures = "0.3"
clap = { version = "4.5", features = [
    "derive",
    "wrap_help",
    "string",
    "env",
    "cargo",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
lopdf = "0.38"
anyhow = "1.0"

globset = "0.4"
glob = "0.3"    # glob is often easier for simple expansion
walkdir = "2.3" # Useful for recursive globbing (**)

[dev-dependencies]
tokio = { version = "1.35", features = [
    "fs",
    "io-util",
    "macros",
    "rt-multi-thread",
] }
rstest = "0.26"
tempfile = "3.23"
serial_test = "3"
