[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "1.0.0-beta.5"
edition = "2024"
authors = ["Nelson Dominguez <ekkolon@proton.me>"]
description = "Concatenate PDF files into a single document"
repository = "https://github.com/pdfcat/pdfcat"
license-file = "LICENSE"
keywords = ["pdf", "merge", "cli", "concatenate"]
categories = ["command-line-utilities"]

[workspace.dependencies]
tokio = { version = "1.35", features = [
    "rt-multi-thread",
    "fs",
    "io-util",
    "macros",
] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

globset = "0.4"
glob = "0.3"    # glob is often easier for simple expansion
walkdir = "2.3" # Useful for recursive globbing (**)

[profile.release]
# Optimize for performance
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
# Faster compilation in development
opt-level = 0

[profile.test]
# Faster test compilation
opt-level = 0
