[package]
name = "pdfcat"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "pdfcat"
path = "src/lib.rs"

[dependencies]
tokio.workspace = true
futures = "0.3"
clap = { version = "4.5", features = [
    "derive",
    "wrap_help",
    "string",
    "env",
    "cargo",
] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
lopdf = "0.38"
anyhow = "1.0"

globset = "0.4"
glob = "0.3"    # glob is often easier for simple expansion
walkdir = "2.3" # Useful for recursive globbing (**)

[dev-dependencies]
tokio.workspace = true
rstest = "0.26"
tempfile = "3.23"
