[package]
name = "pdfcat-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true
categories.workspace = true
build = "build.rs"
include = ["src/**/*.rs", "../../README.md", "../../LICENSE"]

[[bin]]
name = "pdfcat"
path = "src/main.rs"

[dependencies]
pdfcat = { path = "../pdfcat", version = "1.0.0-beta.7" }
tokio.workspace = true

[dependencies.clap]
version = "4.5"
features = ["derive", "wrap_help", "string", "env", "cargo"]

[dev-dependencies]
tokio.workspace = true
rstest = "0.26"
tempfile = "3.23"

[build-dependencies]
tokio.workspace = true
pdfcat = { path = "../pdfcat", version = "1.0.0-beta.7" }
clap = { version = "4", features = ["derive"] }
clap_mangen = "0.2"

[package.metadata.release]
publish = false # disables crates.io publish
tag = true      # enable git tagging
tag-prefix = "" # remove default "pdfcat-cli-" prefix
