[package]
name = "pdfcat"
version = "1.0.0-beta.5"
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true
categories.workspace = true
include = ["src/**/*.rs", "README.md", "../../LICENSE"]

[lib]
name = "pdfcat"
path = "src/lib.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true

futures = "0.3"
lopdf = { version = "0.38", features = ["serde", "async"] }
glob = "0.3"

[dev-dependencies]
tokio.workspace = true
rstest = "0.26"
tempfile = "3.23"
criterion = { version = "0.7", features = ["async_tokio"] }
rand = "0.9"

[[bench]]
name = "merge_bench"
harness = false

[package.metadata.release]
publish = false # disables crates.io publish
tag = false     # disable git tagging
