[package]
name = "pdfcat-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

[dependencies.pdfcat]
path = ".."

# Use independent workspace for fuzzers
[workspace]
members = ["."]

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false
